--- a/lab-00.Rmd
+++ b/lab-00.Rmd
@@ -17,15 +17,15 @@ We set up the data frame. Edit the data below to include information about your 
 
 ```{r setup-tibble}
 team_data <- tibble(
-  name = c("Peter Rabbit", "member 1", "member 2", 
-           "member 3", "member 4"),
-  github_username = c("mcgregors-garden", "username 1", "username 2", 
-                      "username 3", "username 4"), 
-  colour = c("powderblue", "colour 1", "colour 2", 
-             "colour 3", "colour 4"),
-  hobby = c("Hopping", "hobby 1", "hobby 2", 
-            "hobby 3", "hobby 4"),
-  favourite_number = c(2, NA, NA, NA, NA)
+  name = c("Peter Rabbit", "Ethan", "Greg", 
+           "Barry", "Beth"),
+  github_username = c("mcgregors-garden", "Ethan1", "Greg2", 
+                      "Barry3", "Beth4"), 
+  colour = c("powderblue", "cornsilk4", "navajowhite4", 
+             "gold3", "grey50"),
+  hobby = c("Hopping", "Cycling", "Running", 
+            "Swimming", "skiing"),
+  favourite_number = c(2, 3, 4, 5, 6)
   )
 
 team_data
@@ -54,9 +54,9 @@ p1
 Change the text of the plot title and axis labels.
 
 ```{r labelled-bar-plot}
-p1 + labs(x = "Insert text here", 
-          y = "Insert text here",
-          title = "Insert text here")
+p1 + labs(x = "Github Username", 
+          y = "Favourite Number",
+          title = "Team Members Favourite Numbers")
 ```
 
 *Remove this text (including the stars), and add your answer for Exercise 19 here.*
